--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,14 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Hello World from EJS</h1>
-    <img src="/img/nodejs.jpg" />
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+    <title>NodeJS-LEARN</title>
+  </head>
+  <body>
+    <div class="topnav">
+      <a class="active" href="#home">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
+    </div>
+
+    <h1>List User</h1>
+    <div style="padding-left: 16px"><%= JSON.stringify(dataUser) %></div>
+    <!-- <h1>Hello World from EJS</h1>
+    <img src="/img/nodejs.jpg" /> -->
+
+    <table class="w3-table-all w3-hoverable">
+      <thead>
+        <tr class="w3-light-grey">
+          <th>ID</th>
+          <th>First Name</th>
+          <th>Last Name</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <% for(let i = 0; i < dataUser.length; i++) { %>
+      <tr>
+        <td><%= dataUser[i].id %></td>
+        <td><%= dataUser[i].firstName %></td>
+        <td><%= dataUser[i].lastName %></td>
+        <td>
+            <a href="/detail/user/<%= dataUser[i].id %>" target="blank">Detail</a>
+            <button type="button">Edit</button>
+            <button type="button">Delete</button>
+        </td>>
+      </tr>
+      <% } %>
+    </table>
+  </body>
 </html>
