post request create new user to DB

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -26,3 +26,20 @@ body {
     background-color: #04AA6D;
     color: white;
   } 
+
+  .create-new-user {
+    text-align: center;
+  }
+
+  .title {
+    display: block;
+    margin: 10px 0 4px;
+  }
+  
+  .box-button {
+    margin-top: 10px;
+  }
+
+  button {
+    cursor: pointer;
+  }
