delete and update user

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -43,3 +43,11 @@ body {
   button {
     cursor: pointer;
   }
+
+  .form-update, .form-delete {
+    display: inline-block;
+  }
+
+  .box-update {
+    text-align: center;
+  }
